[gd_scene load_steps=5 format=2]

[ext_resource path="res://pickups/Pickup.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/coin_pickup.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/key_grabbed.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="Pickup" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="CoinPickup" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 2 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="KeyPickup" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 3 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]


